--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <a href="mailto:adrian.web.md@gmail.com" class="direct-mail">adrian.web.md@gmail.com</a>
             <a href="src/img/CV Adrián-EN.pdf" download="CV Adrián Zuñiga Pérez.pdf">
               <div class="social-media-overlay">
-                <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="Are you not following me yet?">
+                <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="download it!">
               </div>
             </a>
           </div>
