--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               <li><img src="src/svg/sass-logo.svg" alt="Sass"><span class="overlay-text-skills">SASS</span></li>
               <li><img src="src/svg/javaScript-logo.svg" alt="JavaScript"><span class="overlay-text-skills">JavaScript</span></li>
               <li><img src="src/svg/react-logo.svg" alt="React"><span class="overlay-text-skills">React</span></li>
+              <li><img src="src/svg/Angular.png" alt="Angular"><span class="overlay-text-skills">Angular</span></li>
               <li><img src="src/svg/nextjs.svg" alt="Next JS"><span class="overlay-text-skills">NextJs</span></li>
               <li><img src="src/svg/chakra.svg" alt="ChakraUI"><span class="overlay-text-skills">ChakraUI</span></li>
               <li><img src="src/svg/git-logo.svg" alt="Git"><span class="overlay-text-skills">Git</span></li>
@@ -133,13 +134,14 @@
           <div class="recent-projects">
             <article>
               <div class="project-item">
-                <a class="projects-link" href="https://4driian.github.io/Dalio/"> <img src="./src/img/dalio.png" alt="Imagen de proyecto de Dalio"><div class="project-overlay"><h3>Dalio Project</h3></div></a>
+                <a class="projects-link arjesu" href="./portfolio.html"> <img src="./src/img/image 10.png" alt="Imagen de proyecto de Arjesu"><div class="project-overlay"><h3>Arjesu</h3></div></a>
               </div>
             </article>
   
             <article>
               <div class="project-item">
-                <a class="projects-link" href="https://4driian.github.io/Biccas/"><img src="./src/img/biccas.png" alt="Imagen de proyecto de Biccas"><div class="project-overlay"><h3>Biccas Project</h3></div></a>
+                <a class="projects-link" href="https://lalibertad-cetav.vercel.app/"> <img src="./src/img/cetav.png" alt="Imagen de proyecto de CETAV"><div class="project-overlay"><h3>CETAV Project</h3></div></a>
+
               </div>
             </article>
           </div>
@@ -158,7 +160,7 @@
           <a href="mailto:adrian.web.md@gmail.com" class="direct-mail">adrian.web.md@gmail.com</a>
           <a href="src/img/CV Adrián-EN.pdf" download="CV Adrián Zuñiga Pérez.pdf">
             <div class="social-media-overlay">
-              <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="Are you not following me yet?">
+              <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="download it!">
             </div>
           </a>
         </div>
