--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         <!--Dalio-->
         <article class="box-info-right"> 
           <div class="project-item">
-            <a class="projects-link" href="https://4driian.github.io/Dalio/"> <img src="./src/img/dalio.png" alt="Imagen de proyecto de Dalio"><div class="project-overlay"><h3>Dalio Project</h3></div></a>
+            <a class="projects-link" href="https://github.com/4Driian/Dalio"> <img src="./src/img/dalio.png" alt="Imagen de proyecto de Dalio"><div class="project-overlay"><h3>Dalio Project</h3></div></a>
           </div>
           <div class="background--white">
             <p>Dalio was an exciting project developed during the first semester of Web Design.
@@ -70,7 +70,7 @@
         <!--Biccas-->
         <article class="box-info-left"> 
           <div class="project-item">
-            <a class="projects-link" href="https://4driian.github.io/Biccas/"> <img src="./src/img/biccas.png" alt="Imagen de proyecto de Biccas"><div class="project-overlay"><h3>Biccas Project</h3></div></a>
+            <a class="projects-link" href="https://github.com/4Driian/Biccas"> <img src="./src/img/biccas.png" alt="Imagen de proyecto de Biccas"><div class="project-overlay"><h3>Biccas Project</h3></div></a>
           </div>
           <div class="background--white">
             <p>Biccas was an engaging project undertaken during the second semester of Web Design. 
@@ -93,7 +93,7 @@
         <!--Benito Shop-->
         <article class="box-info-right"> 
           <div class="project-item">
-            <a class="projects-link" href="https://proyecto-final-mu-eight.vercel.app/"> <img src="./src/img/BenitoShop.png" alt="Imagen de proyecto de BenitoShop"><div class="project-overlay"><h3>BenitoShop Project</h3></div></a>
+            <a class="projects-link" href="https://github.com/4Driian/proyecto-final"> <img src="./src/img/BenitoShop.png" alt="Imagen de proyecto de BenitoShop"><div class="project-overlay"><h3>BenitoShop Project</h3></div></a>
           </div>
           <div class="background--white">
             <p>
@@ -117,7 +117,7 @@
         <!--Dad Jokes-->
         <article class="box-info-left"> 
           <div class="project-item">
-            <a class="projects-link" href="https://4driian.github.io/dad-jokes/"> <img src="./src/img/dad-jokes.png" alt="Imagen de proyecto de Biccas"><div class="project-overlay"><h3>Dad Jokes Project</h3></div></a>
+            <a class="projects-link" href="https://github.com/4Driian/dad-jokes"> <img src="./src/img/dad-jokes.png" alt="Imagen de proyecto de Biccas"><div class="project-overlay"><h3>Dad Jokes Project</h3></div></a>
           </div>
           <div class="background--white">
             <p>
@@ -188,6 +188,27 @@
           </div>
         </article>
 
+        <article class="box-info-right"> 
+          <div class="project-item">
+            <a class="projects-link arjesu" href="./portfolio.html"> <img src="./src/img/image 10.png" alt="Imagen de proyecto de Arjesu"><div class="project-overlay"><h3>Arjesu</h3></div></a>
+          </div>
+          <div class="background--white">
+            <p>
+              This is a project that is still under development.
+              We took on the task of creating a project from scratch for “Arjesu”, a 
+              distributor of wholesale tools, using the best of the market for an optimized operation.
+            </p>
+            <div class="skills-list">
+              <ul>
+                <li><img src="src/svg/Angular.png" alt="Angular"><span class="overlay-text-skills">Angular</span></li>
+                <li><img src="src/svg/sass-logo.svg" alt="Sass"><span class="overlay-text-skills">SASS</span></li>
+                <li><img src="src/svg/Typescript_logo_2020.svg.png" alt="TypeScript"><span class="overlay-text-skills">TypeScript</span></li>
+                <li><img src="src/svg/figma-logo.svg" alt="Figma"><span class="overlay-text-skills">Figma</span></li>
+              </ul>
+            </div>
+          </div>
+        </article>
+
       </section>
     </main>
 
@@ -200,7 +221,7 @@
           <a href="mailto:adrian.web.md@gmail.com" class="direct-mail">adrian.web.md@gmail.com</a>
           <a href="src/img/CV Adrián-EN.pdf" download="CV Adrián Zuñiga Pérez.pdf">
             <div class="social-media-overlay">
-              <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="Are you not following me yet?">
+              <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="download it!">
             </div>
           </a>
         </div>
