--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
     <main>
       <footer class="content footer">
         <h2>Get my contact!</h2>
-        <p class="social-media-description">Just click to send me a Email or download my CV.</p>
+        <p class="social-media-description">See my profile or download my CV.</p>
         <section class="social-media">
           <div class="social-media-links">
             <!--Link to github-->
-            <a href="mailto:adrian.web.md@gmail.com" class="direct-mail">adrian.web.md@gmail.com</a>
+            <a href="https://www.linkedin.com/in/az-dev/" class=" linkedin-logo"><img src="./src/svg/LinkedIn_icon.svg.png" alt=""></a>
             <a href="src/img/CV Adrián-EN.pdf" download="CV Adrián Zuñiga Pérez.pdf">
               <div class="social-media-overlay">
                 <img class="social-media-cv" src="./src/img/cv.png" alt="Ir al perfil de GitHub de Adrián" title="download it!">
@@ -58,7 +58,7 @@
             </a>
           </div>
         </section>
-        <p class="copyright">© 2024 Adrián Zúñiga Pérez, Copyright. All rights reserved.</p>
+        <p class="copyright">© 2025 Adrián Zúñiga Pérez, Copyright. All rights reserved.</p>
       </footer> 
     </main>
     
